# vibe

./: .astylerc  .gitignore  CMakeLists.txt  ConfigureChecks.cmake  HACKING  LICENSE.LGPL  Macros.cmake  README  README.md  cmake_uninstall.cmake.in  config.h.cmake  header.BSD  header.GPL  header.GPL3+  header.LGPL  header.LGPL-ONLY  header.LGPL2+
apps/terminal/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/tracker/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trackerwindow.cpp  trackerwindow.h  trackerwindow.ui
cmake/: CMakeLists.txt  HawaiiInstallDirs.cmake
cmake/modules/: CMakeLists.txt  FindSolid.cmake  MauiInstallDirs.cmake  Qt4ConfigDependentSettings.cmake
data/cmake/: CMakeLists.txt  VibeBasicConfig.cmake.in  VibeConfigVersion.cmake.in
data/fonts/: CMakeLists.txt
data/gsettings/: CMakeLists.txt  org.vision.desktop.interface.xml
data/pkgconfig/: CMakeLists.txt  QubeCore.pc.in  QubeGui.pc.in  QubeHardware.pc.in  QubeStorage.pc.in  VibeCore.pc.in  VibeDeclarative.pc.in  VibeGui.pc.in  VibeHardware.pc.in  VibeStorage.pc.in  VibeWidgets.pc.in
data/settings/: CMakeLists.txt  PostInstall.cmake.in  org.hawaii.desktop.background.gschema.xml  org.hawaii.desktop.background.gschema.xml.in  org.hawaii.desktop.enums.xml  org.hawaii.desktop.interface.gschema.xml  org.hawaii.desktop.json.in  org.hawaii.desktop.settings.in  org.hawaii.desktop.settingsc  org.maui.desktop.background.gschema.xml  org.maui.desktop.enums.xml  org.maui.desktop.interface.gschema.xml
headers/QubeHardware/: AudioInterface  CMakeLists.txt  DeviceInterface  NetworkInterface  OpticalDisc  PortableMediaPlayer  PowerManagement  SmartCardReader  StorageAccess  StorageDrive  acadapter.h  audiointerface.h  battery.h  block.h  button.h  camera.h  device.h  deviceinterface.h  devicenotifier.h  dvbinterface.h  genericinterface.h  internetgateway.h  networking.h  networkinterface.h  networkshare.h  opticaldisc.h  opticaldrive.h  portablemediaplayer.h  powermanagement.h  predicate.h  processor.h  qubehardwarenamespace.h  serialinterface.h  smartcardreader.h  storageaccess.h  storagedrive.h  storagevolume.h  video.h
headers/VibeCore/: CMakeLists.txt  VAbstractCompressionFilter  VAccountsManager  VApplicationInfo  VArchive  VArchiveHandler  VArchiveHandlerPlugin  VBookmark  VBookmarkManager  VCommandOptions  VCompositeJob  VCompressionFilter  VDesktopFile  VFileString  VFileSupport  VFileSystemWatcher  VJob  VJobTrackerInterface  VJobUiDelegate  VMimeType  VSaveFile  VSettings  VSharedPointer  VSharedPtr  VStandardDirectories  VStringHandler  VUserAccount  VibeCoreExport  vabstractcompressionfilter.h  vaccountsmanager.h  vapplicationinfo.h  varchive.h  varchivehandler.h  varchivehandlerplugin.h  vbookmark.h  vbookmarkmanager.h  vcommandoptions.h  vcompositejob.h  vcompressionfilter.h  vdesktopfile.h  (+14 more)
headers/VibeGui/: CMakeLists.txt  VAboutDialog  VBreadCrumbBar  VBreadCrumbDirModel  VClickableLabel  VColorScheme  VCommonStyle  VGuiApplication  VInterfaceMacros  VMainApplicationAdaptor  VNavBar  VNavBarGroup  VNavBarItem  VPageWidget  VPreferencesModuleInfo  VPreferencesModulePlugin  VSelectableWidget  VStyle  VStyleOptionBreadCrumbBar  VTitleWidget  VibeGuiExport  breadcrumbbar.h  breadcrumbdirmodel.h  vclickablelabel.h  vcolorscheme.h  vcommonstyle.h  vguiapplication.h  vinterfacemacros.h  vmainapplicationadaptor.h  vnavbar.h  vnavbargroup.h  vnavbaritem.h  vpagemodel.h  vpreferencesmodule.h  vpreferencesmoduleinfo.h  vpreferencesmoduleplugin.h  vselectablewidget.h  vstyle.h  vstyleoptionbreadcrumbbar.h
headers/VibeHardware/: CMakeLists.txt  DeviceNotifier  GenericInterface  InternetGateway  SerialInterface  VAcAdapter  VAudioInterface  VBattery  VBlock  VButton  VCamera  VDevice  VDeviceInterface  VDeviceNotifier  VDvbInterface  VGenericInterface  VHardware  VInternetGateway  VNetworkInterface  VNetworkShare  VNetworking  VOpticalDisc  VOpticalDrive  VPortableMediaPlayer  VPowerManagement  VPredicate  VProcessor  VSerialInterface  VSmartCardReader  VStorageAccess  VStorageDrive  VStorageVolume  VVideo  acadapter.h  battery.h  camera.h  device.h  devicenotifier.h  dvbinterface.h  genericinterface.h  (+38 more)
headers/VibeWidgets/: CMakeLists.txt  VApplication  VBreadcrumbView  VCategorizedSortFilterProxyModel  VCategorizedView  VCategoryDrawer  VColorButton  VFilePlacesView  VFileSystemModel  VLineEdit  VNavigationBar  VPageModel  VPageView  VPageWidgetModel  VPreferencesModule  VibeWidgetsExport  vaboutdialog.h  vapplication.h  vbreadcrumbview.h  vcategorizedsortfilterproxymodel.h  vcategorizedview.h  vcategorydrawer.h  vcolorbutton.h  vfileplacesmodel.h  vfileplacesview.h  vfilesystemmodel.h  vlineedit.h  vnavigationbar.h  vpagemodel.h  vpageview.h  vpagewidget.h  vpagewidgetmodel.h  vpreferencesmodule.h  vpreferencesmoduleplugin.h  vtitlewidget.h
samples/aboutdialog/: CMakeLists.txt  main.cpp
samples/navbar/: CMakeLists.txt  main.cpp  navbar.qrc
src/core/: CMakeLists.txt  cmakedirs.h.in  mimetype.cpp  mimetype.h  qubecoreglobals.cpp  qubecoreglobals.h  singleton.cpp  singleton.h  vapplicationinfo.cpp  vapplicationinfo.h  vapplicationinfo_p.h  vcommandoptions.cpp  vcommandoptions.h  vdesktopfile.cpp  vdesktopfile.h  vdesktopfile_p.h  vglobal.h.in  vsharedpointer.h  vsharedptr.h  vstringhandler.cpp  vstringhandler.h
src/designer/: CMakeLists.txt  designer.pro  qnavbarplugin.cpp  qnavbarplugin.h  qrc_icons.cpp  qubewidgets.h
src/fluid/: CMakeLists.txt  fluid.qrc  fluidplugin.cpp  fluidplugin.h  iconimageprovider.cpp  iconimageprovider.h  qmldir
src/gui/: CMakeLists.txt  QNavBar  QNavBarGroup  clickablelabel.h  colorscheme.cpp  colorscheme.h  navbar.cpp  navbar.h  navbargroup.cpp  navbargroup.h  navbaritem.cpp  org.maui.DBus.MainApplication.xml  qclickablelabel.cpp  qclickablelabel.h  qnavbar.cpp  qnavbar.h  qnavbargroup.cpp  qnavbargroup.h  qnavbaritem.cpp  qnavbaritem.h  qselectablewidget.cpp  qselectablewidget.h  qubeguiglobals.cpp  selectablewidget.cpp  theme.h  vcolorscheme.cpp  vcolorscheme.h  vcolorscheme_p.h  vguiapplication.cpp  vguiapplication.h  (+4 more)
(+1236 files in other folders)
