set(cmakeFiles
    CheckCXXSymbolExists.cmake
    check_installed_exports_file.cmake
    CheckPointerMember.cmake
    CheckPrototypeExists.cmake
    CheckStructMember.cmake
    FindFlex.cmake
    FindHUpnp.cmake
    FindLibLZMA.cmake
    FindQt4.cmake
    FindSharedMimeInfo.cmake
    FindUDev.cmake
    HandleImportedTargetsInCMakeRequiredLibraries.cmake
    MacroAddCompileFlags.cmake
    MacroAdditionalCleanFiles.cmake
    MacroAddLinkFlags.cmake
    MacroAppendIf.cmake
    MacroBoolTo01.cmake
    MacroEnsureOutOfSourceBuild.cmake
    MacroEnsureVersion.cmake
    MacroLibrary.cmake
    MacroLogFeature.cmake
    MacroOptionalAddSubdirectory.cmake
    MacroOptionalDependPackage.cmake
    MacroOptionalFindPackage.cmake
    MacroPushRequiredVars.cmake
    MacroWriteBasicCMakeVersionFile.cmake
    Qt4ConfigDependentSettings.cmake
    Qt4Macros.cmake
)

install(FILES ${cmakeFiles} DESTINATION ${CMAKE_ROOT}/Modules)
