set(HEADERS
    VAbstractCompressionFilter
    VAccountsManager
    VApplicationInfo
    VArchive
    VArchiveHandler
    VArchiveHandlerPlugin
    VBookmark
    VBookmarkManager
    VCommandOptions
    VCompositeJob
    VCompressionFilter
    VDesktopFile
    VFileString
    VFileSupport
    VFileSystemWatcher
    VGlobal
    VJob
    VJobTrackerInterface
    VJobUiDelegate
    VSaveFile
    VSettings
    VSharedPointer
    VStringHandler
    VUserAccount
    VUserAccountList
)

install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/VibeCore)
